# digit-worker-package

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: python-publish.yml
digit_camunda_worker/: __about__.py  __init__.py
tests/: __init__.py
