[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "digit-camunda-worker"
description = 'A Camunda/Zeebe async worker'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Håkan Persson", email = "hakan.persson@haninge.se" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/hakan-persson/digit-worker-package#readme"
Issues = "https://github.com/hakan-persson/digit-worker-package/issues"
Source = "https://github.com/hakan-persson/digit-worker-package"

[tool.hatch.version]
path = "digit_camunda_worker/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "zeebe-grpc==8.0",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=digit_camunda_worker --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "digit_camunda_worker/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
